--- a/tiendaOnline/templates/bases/header.html
+++ b/tiendaOnline/templates/bases/header.html
@@ -8,7 +8,7 @@
             class="top_nav_left text-right"
             style="line-height: 30px !important">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <a href="#" id="mi_cuenta">Mi Cuenta</a>
+            <a href="/admin" id="mi_cuenta">Mi Cuenta</a>
           </div>
         </div>
       </div>
